feat(web): initial reservation
