# absolutecinema/internal/service/reservation/models.go
@@ -7,25 +7,26 @@ import (
 )
 
 type CreateReservationInput struct {
-	ScreeningID   uuid.UUID
-	UserID        *uuid.UUID
-	GuestName     string
-	GuestEmail    string
-	ReservedSeats []reservedseat.ReservedSeat
+	ScreeningID   uuid.UUID                   `json:"screeningID"`
+	UserID        *uuid.UUID                  `json:"userID,omitempty"`
+	GuestName     string                      `json:"guestName"`
+	GuestEmail    string                      `json:"guestEmail,omitempty"`
+	ReservedSeats []reservedseat.ReservedSeat `json:"reservedSeats"`
 }
 
 type ReservedSeat = reservedseat.ReservedSeat
+
 type ReservedSeatOutput struct {
-	ID     uuid.UUID
-	SeatID uuid.UUID
+	ID     uuid.UUID `json:"id"`
+	SeatID uuid.UUID `json:"seatID"`
 }
 
 type ReservationOutput struct {
-	ID            uuid.UUID
-	ScreeningID   uuid.UUID
-	UserID        *uuid.UUID
-	GuestName     string
-	GuestEmail    string
-	PDFPath       string
-	ReservedSeats []ReservedSeatOutput
+	ID            uuid.UUID            `json:"id"`
+	ScreeningID   uuid.UUID            `json:"screeningID"`
+	UserID        *uuid.UUID           `json:"userID,omitempty"`
+	GuestName     string               `json:"guestName"`
+	GuestEmail    string               `json:"guestEmail,omitempty"`
+	PDFPath       string               `json:"pdfPath,omitempty"`
+	ReservedSeats []ReservedSeatOutput `json:"reservedSeats,omitempty"`
 }
